added ui design text

--- a/kiki.html
+++ b/kiki.html
@@ -4,6 +4,7 @@
 <title>Test for GITHUB MINI COURSE</title>
 </head>
 <body>
-<hi>Hello World</h1>
 <img src="jaemin.jpg"/>
+<h1>Hello World</h1>
+<b>UI Design</b>
 </body>
